0.14.0/_sources/_autosummary/baybe.transformations.basic.ClampingTransformation.rst.txt
ClampingTransformation
======================

.. currentmodule:: baybe.transformations.basic

.. autoclass:: ClampingTransformation
   :members:                              
   :show-inheritance:                 
   :inherited-members:

   
   
   .. rubric:: Public methods

   .. autosummary::
   
      ~ClampingTransformation.__init__
      ~ClampingTransformation.abs
      ~ClampingTransformation.chain
      ~ClampingTransformation.clamp
      ~ClampingTransformation.from_dict
      ~ClampingTransformation.from_json
      ~ClampingTransformation.get_codomain
      ~ClampingTransformation.get_image
      ~ClampingTransformation.negate
      ~ClampingTransformation.to_botorch_objective
      ~ClampingTransformation.to_dict
      ~ClampingTransformation.to_json
   
   

   
   
   .. rubric:: Public attributes and properties

   .. autosummary::
   
      ~ClampingTransformation.cutoffs
   
   